# A_stock_Analysis

./: .env.example  README.md  metadata.json  package-lock.json  package.json  pyproject.toml  server.ts
python_design/: config.py  crud.py  database.py  main.py  models.py  schemas.py  services.py
python_design/routers/: stocks.py
src/: App.tsx
src/components/: BulkSync.tsx
src/server/: config.ts  crud.ts  database.ts  models.ts  services.ts
src/server/routers/: stocks.ts
